# Learned_Binary_Mask

./: .gitignore  adv_prune_decompose.py  adv_utils.py  config.py  data_utils.py  decomposition.py  evaluation.py  learned_binary_mask_pruning.py  main.py  mi_pruning.py  model_utils.py  pruning_strategies.py  pruning_sweep.py  pyproject.toml  requirements.txt  run_all.sh  run_sparsity_sweep.sh  training.py  visualize_sweep_results.ipynb  wanda_pruning.py
cli/: decompose_eval.py  prune_eval.py  run.py
core/: bootstrap_training.py  config.py  data_utils.py  decomposition.py  evaluation.py  model_utils.py
core/adversarial/: adapters.py  eps_cfg.py  generators.py  mixers.py  samplers.py
core/pipelines/: adv_data.py  evaluate.py  pruning.py
core/pruning/: mi_pruning.py  strategies.py
core/utils/: adv_utils.py  metrics_csv.py
pipelines/: adv_data.py  decompose.py  evaluate.py  pruning.py
scripts/: run_all.sh  run_sparsity_sweep.sh
tests/: conftest.py  test_adapters.py  test_adv_data_builders.py  test_decomposition.py  test_eps_adapters_roundtrip.py  test_eps_adapters_values.py  test_eps_edges.py  test_eps_strict_formats.py  test_evaluate_binary_mapping.py  test_evaluate_to_csv_binary_smoke.py  test_imports_and_strategies.py  test_lbmask_scheduler_smoke.py  test_metrics_csv.py  test_mixers.py  test_wanda_masks_edges.py  test_wanda_purne_smoke.py
utils/: metrics_csv.py
